<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signal_m3_toolbar_height"
        android:minHeight="@dimen/signal_m3_toolbar_height"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/symbol_arrow_start_24"
        app:title="@string/UsernameEditFragment_username"
        app:titleTextAppearance="@style/Signal.Text.TitleLarge" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_tintable"
        android:importantForAccessibility="no"
        android:padding="14dp"
        app:backgroundTint="@color/signal_colorSurface2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:srcCompat="@drawable/symbol_at_24"
        app:tint="@color/signal_colorOnSurface" />

    <View
        android:id="@+id/username_box_fill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/dsl_settings_gutter"
        android:background="@drawable/username_edit_box_fill"
        app:layout_constraintBottom_toBottomOf="@id/username_text_wrapper"
        app:layout_constraintLeft_toLeftOf="@id/username_text_wrapper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_text_wrapper" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_wrapper"
        style="@style/Widget.Signal.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dsl_settings_gutter"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:theme="@style/Signal.ThemeOverlay.TextInputLayout"
        app:boxStrokeColor="@color/signal_colorPrimary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorTextAppearance="@style/Signal.Text.Zero"
        app:expandedHintEnabled="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/suffix_progress"
        app:layout_constraintTop_toBottomOf="@id/summary"
        app:suffixTextColor="@color/signal_colorOnSurface">

        <EditText
            android:id="@+id/username_text"
            style="@style/Signal.Text.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UsernameEditFragment_username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layoutDirection="ltr"
            android:maxLines="1"
            android:minHeight="56dp">

            <requestFocus />
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/discriminator_text"
        style="@style/Signal.Text.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/UsernameEditFragment__00"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/username_text_wrapper"
        app:layout_constraintRight_toRightOf="@id/username_box_fill"
        tools:text="21" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/suffix_progress"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        app:indicatorColor="@color/signal_colorOnSurfaceVariant"
        app:indicatorSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/username_text_wrapper"
        app:layout_constraintRight_toLeftOf="@id/discriminator_text"
        app:trackColor="@color/transparent"
        app:trackThickness="1.75dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/signal_colorOutline"
        app:layout_constraintBottom_toBottomOf="@id/discriminator_text"
        app:layout_constraintLeft_toLeftOf="@id/discriminator_text"
        app:layout_constraintTop_toTopOf="@id/discriminator_text" />

    <View
        android:id="@+id/username_text_focused_stroke"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/signal_colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/username_text_wrapper"
        app:layout_constraintLeft_toLeftOf="@id/username_text_wrapper"
        app:layout_constraintRight_toRightOf="@id/discriminator_text" />

    <TextView
        android:id="@+id/username_error"
        style="@style/Signal.Text.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/signal_colorError"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/username_description"
        app:layout_constraintRight_toRightOf="@id/username_description"
        app:layout_constraintTop_toBottomOf="@id/username_text_wrapper"
        tools:text="Error something bad happened. Very super long error message that wraps"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dsl_settings_gutter"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/dsl_settings_gutter"
        android:gravity="center"
        android:text="@string/UsernameEditFragment__choose_your_username"
        android:textAppearance="@style/Signal.Text.BodyLarge"
        android:textColor="@color/signal_colorOnSurfaceVariant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <dev.chat.fork.messenger.util.views.LearnMoreTextView
        android:id="@+id/username_description"
        style="@style/Signal.Text.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dsl_settings_gutter"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dsl_settings_gutter"
        android:layout_marginBottom="24dp"
        android:text="@string/UsernameEditFragment__usernames_let_others_message"
        android:textColor="@color/signal_colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/username_button_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_error"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/username_skip_button"
        style="@style/Widget.Signal.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dsl_settings_gutter"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:text="@string/UsernameEditFragment__skip"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/username_done_button"
        style="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dsl_settings_gutter"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/UsernameEditFragment__done"
        android:visibility="gone"
        app:backgroundTint="@color/signal_colorPrimaryContainer"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_end_24"
        app:tint="@color/signal_colorOnPrimaryContainer"
        tools:visibility="visible" />

    <dev.chat.fork.messenger.util.views.CircularProgressMaterialButton
        android:id="@+id/username_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:circularProgressMaterialButton__label="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <dev.chat.fork.messenger.util.views.CircularProgressMaterialButton
        android:id="@+id/username_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:circularProgressMaterialButton__label="@string/UsernameEditFragment_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <dev.chat.fork.messenger.components.ProgressCard
        android:id="@+id/username_progress_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/username_button_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="username_submit_button,username_delete_button,username_skip_button,username_done_button" />

</androidx.constraintlayout.widget.ConstraintLayout>