...
    <string name="giphy_activity_toolbar__search_gifs">Search GIFs</string>

    <!-- giphy_fragment -->
    <string name="giphy_fragment__nothing_found">Nothing found</string>

    <!-- load_more_header -->
    <string name="load_more_header__loading">Loading</string>

    <!-- media_overview_activity -->
    <string name="media_overview_activity__no_media">No media</string>

    <!-- message_recipients_list_item -->
    <string name="message_recipients_list_item__view">View</string>
...
